--- a/menu.css
+++ b/menu.css
@@ -6,7 +6,6 @@ body {
 
 a {
   text-decoration: none;
-  color: white;
 }
 
 header {
@@ -183,6 +182,7 @@ input[type=checkbox] {
 .section_button button:hover {
   background: #9356dc;
   background: linear-gradient(0deg, rgb(163, 99, 240) 0%, rgb(248, 138, 217) 100%);
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
 }
 
 footer {
@@ -200,6 +200,34 @@ footer div {
   flex-direction: row;
   align-items: center;
   gap: 0.5rem;
+}
+footer a {
+  color: white;
+}
+
+/* Define keyframes for the entrance animation */
+@keyframes entranceAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+/* Apply the animation to each article */
+.entres, .plats, .desserts {
+  animation: entranceAnimation 0.5s ease-in-out forwards;
+}
+
+/* Delay the animation for each article */
+.plats {
+  animation-delay: 0.2s;
+}
+
+.desserts {
+  animation-delay: 0.4s;
 }
 
 @media (min-width: 767.98px) {
@@ -230,6 +258,11 @@ footer div {
     display: flex;
     flex-direction: row;
     gap: 2rem;
+  }
+  .element .selection:hover {
+    display: flex;
+    width: 100px;
+    opacity: 100%;
   }
 }
 
