--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ main {
   gap: 1rem;
   margin-bottom: 3rem;
 }
-.bar_button article {
+.bar_button .block {
   border: none;
   color: black;
   display: flex;
@@ -183,7 +183,8 @@ main {
   width: 100%;
   justify-content: flex-end;
 }
-.card article .tag {
+
+.tag {
   background: #a9e0d1;
   color: #3b8468;
   font-weight: 500;
