--- a/menu.css
+++ b/menu.css
@@ -111,7 +111,7 @@ input[type=checkbox] {
 .element .card_element {
   display: flex;
   padding: 1rem;
-  align-items: end;
+  align-items: flex-end;
   justify-content: space-between;
   background-color: white;
   border-radius: 1rem;
@@ -121,6 +121,13 @@ input[type=checkbox] {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 2.5em;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .element h3 {
   margin: 0px;
@@ -143,7 +150,6 @@ input[type=checkbox] {
   background: #a9e0d1;
   cursor: pointer;
   height: auto;
-  width: 0px;
   opacity: 0;
   border-radius: 0 1rem 1rem 0;
   display: flex;
@@ -244,9 +250,6 @@ footer a {
   .border_green {
     width: 4%;
   }
-  .element input[type=checkbox]:checked + .selection {
-    width: 10%;
-  }
   footer {
     flex-direction: row-reverse;
     justify-content: flex-start;
@@ -259,10 +262,10 @@ footer a {
     flex-direction: row;
     gap: 2rem;
   }
-  .element .selection:hover {
-    display: flex;
-    width: 100px;
-    opacity: 100%;
+  .check:hover .selection {
+    width: 10%;
+    height: auto;
+    opacity: 1;
   }
 }
 
