--- a/menu.scss
+++ b/menu.scss
@@ -4,7 +4,8 @@ $Green: #a9e0d1;
 $Green2: #3b8468;
 $fontlogotitres: 'Shrikhand';
 $gradient: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
-
+$lines: 220px;
+$line-height: 20px;
 body{
     padding: 0px;
     margin: 0px;
@@ -100,24 +101,37 @@ h2{
     height: 3px;
     margin-bottom: 1rem;
 }
-.element{
+@mixin line-clamp($lines, $line-height) {
+  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical;
+  max-height: $lines * $line-height;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.element {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .card_element {
+      display: flex;
+      padding: 1rem;
+      align-items: flex-end;
+      justify-content: space-between;
+      background-color: white;
+      border-radius: 1rem;
+      width: 100%;
+  }
+
+  .card_description {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    .card_element{
-        display: flex;
-        padding: 1rem;
-        align-items: end;
-        justify-content: space-between;
-        background-color: white;
-        border-radius: 1rem;
-        width: 100%;
-    }
-    .card_description{
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-    }
+    gap: 5px;
+    @include line-clamp(2, 1.25em);
+  }
+
     h3{
         margin: 0px;
         font-weight: 500;
@@ -139,7 +153,6 @@ h2{
         background: $Green;
         cursor: pointer;
         height: auto;
-        width: 0px;
         opacity: 0;
         border-radius: 0 1rem 1rem 0;
         display: flex;
@@ -148,7 +161,7 @@ h2{
         transition: transform 0.4s ease-in-out, width 0.4s ease-in-out, opacity 0.4s ease-in-out;
     }
     input[type="checkbox"]{
-        display: none
+        display: none;
     }
     input[type="checkbox"]:checked + .selection {
         width: 20%;
@@ -240,11 +253,7 @@ footer{
     .border_green{
         width: 4%;
     }
-    .element{
-        input[type="checkbox"]:checked + .selection {
-            width: 10%;
-        }
-    }
+
     footer{
         flex-direction: row-reverse;
         justify-content: flex-start;
@@ -257,11 +266,11 @@ footer{
           gap: 2rem;
         }
       }  
-    .element{
-      .selection:hover{
-      display: flex;
-      width: 100px;
-      opacity: 100%;
+    .check:hover{
+      .selection{
+        width: 10%;
+        height: auto;
+        opacity: 1;
       }
     }
   }
