--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ main {
   gap: 1rem;
   margin-bottom: 3rem;
 }
-.bar_button .block {
+.bar_button article {
   border: none;
   color: black;
   display: flex;
@@ -183,8 +183,7 @@ main {
   width: 100%;
   justify-content: flex-end;
 }
-
-.tag {
+.card article .tag {
   background: #a9e0d1;
   color: #3b8468;
   font-weight: 500;
