--- a/menu.css
+++ b/menu.css
@@ -158,7 +158,9 @@ input[type=checkbox] {
   transition: transform 0.4s ease-in-out, width 0.4s ease-in-out, opacity 0.4s ease-in-out;
 }
 .element input[type=checkbox] {
-  display: none;
+  margin-left: -20em;
+  width: 300px;
+  opacity: 0;
 }
 .element input[type=checkbox]:checked + .selection {
   width: 20%;
