--- a/menu.css
+++ b/menu.css
@@ -153,6 +153,7 @@ input[type=checkbox] {
   opacity: 0;
   border-radius: 0 1rem 1rem 0;
   display: flex;
+  margin-left: 15px;
   align-items: center;
   justify-content: center;
   transition: transform 0.4s ease-in-out, width 0.4s ease-in-out, opacity 0.4s ease-in-out;
